Closed
Bug 376514
Opened 18 years ago
Closed 18 years ago
stop text accessible using for nsHTMLListBulletAccessible
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
People
(Reporter: surkov, Assigned: surkov)
References
Details
Attachments
(1 file, 1 obsolete file)
7.17 KB,
patch
|
ginnchen+exoracle
:
review+
|
Details | Diff | Splinter Review |
Per bug 372131, we keep nsTextAccessible for MSAA uses. nsTextAccessible inherits the logic of action and states from linkable accessible. It looks nsHTMLListBulletAccessible isn't related with linkable accessibles therefore it's resonable to stop text accessible using for it.
Attachment #260606 -
Flags: review?(ginn.chen)
Comment 1•18 years ago
|
||
Please see bug 376275.
Comment on attachment 260606 [details] [diff] [review]
patch
it caused crashes.
stacks here:
#6 0xb6ed7e45 in nsAccessible::IsCorrectFrameType (aFrame=0x220022,
aAtom=0x82e9348) at nsAccessible.cpp:1310
#7 0xb6ee08aa in nsAccessible::GetBoundsRect (this=0x8cfc068,
aTotalBounds=@0xbf9bf25c, aBoundingFrame=0xbf9bf26c)
at nsAccessible.cpp:1203
#8 0xb6edfdc7 in nsAccessible::GetBounds (this=0x8cfc068, x=0xbf9bf2bc,
y=0xbf9bf2b8, width=0xbf9bf2b4, height=0xbf9bf2b0) at nsAccessible.cpp:1278
#9 0xb6f0a54d in nsHTMLLIAccessible::GetBounds (this=0x8bb2d00, x=0xbf9bf360,
y=0xbf9bf35c, width=0xbf9bf358, height=0xbf9bf354)
at nsHTMLTextAccessible.cpp:294
#10 0xb6f20cdf in getExtentsCB (aComponent=0x81681b8, aAccX=0xbf9bf428,
aAccY=0xbf9bf424, aAccWidth=0xbf9bf420, aAccHeight=0xbf9bf41c,
aCoordType=ATK_XY_SCREEN) at nsMaiInterfaceComponent.cpp:111
#11 0xb78e1936 in atk_component_get_extents (component=0x81681b8,
x=0xbf9bf428, y=0xbf9bf424, width=0xbf9bf420, height=0xbf9bf41c,
coord_type=ATK_XY_SCREEN) at atkcomponent.c:255
Attachment #260606 -
Flags: review?(ginn.chen) → review-
Assignee | ||
Comment 3•18 years ago
|
||
(In reply to comment #1)
> Please see bug 376275.
>
Looks like unrelated things.
Assignee | ||
Comment 4•18 years ago
|
||
Attachment #260606 -
Attachment is obsolete: true
Attachment #261115 -
Flags: review?(ginn.chen)
Attachment #261115 -
Flags: review?(ginn.chen) → review+
Assignee | ||
Comment 5•18 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•