Fix for bug 376514 - stop text accessible using for nsHTMLListBulletAccessible